--- a/src/components/common/Screens/style.scss
+++ b/src/components/common/Screens/style.scss
@@ -32,7 +32,7 @@
 }
 .ptr-screen.focused .ptr-screen-overlay {
   outline: none;
-  box-shadow: inset 0 m(1/2) 0 m(-1/6) rgba($bo-accent5, .6);
+  box-shadow: inset 0 m(1/2) 0 m(-1/6) rgba(var(--accent6rgb), .6);
 }
 
 .ptr-screen.disabled > .ptr-screen-overlay {
