Colours: new functions :construction:

--- a/src/apps/backOffice/components/Test/style.scss
+++ b/src/apps/backOffice/components/Test/style.scss
@@ -7,7 +7,7 @@
 	display: block;
 	position: absolute;
 	width: 1px;
-	background: #abc;
+	background: rgba(180,180,180,.3);
 	left: 50%;
 	height: 100%;
 	content: " ";
