--- a/src/apps/backOffice/components/AppSelect/style.scss
+++ b/src/apps/backOffice/components/AppSelect/style.scss
@@ -2,7 +2,7 @@
 
 .ptr-bo-app-select-item {
 	height: m(2);
-	width: 10rem;
+	width: 12rem;
 
 	position: relative;
 }
@@ -15,6 +15,13 @@
 	color: #ccc;
 }
 
+.ptr-bo-app-select-item > .ptr-icon {
+	position: absolute;
+	top: 50%;
+	right: .5rem;
+	transform: translateY(-50%);
+}
+
 .ptr-bo-app-select-list {
 	position: absolute;
 	padding: m(1/3) m(1/3) 0;
@@ -22,6 +29,11 @@
 	transform-origin: top;
 	transition: transform .3s ease-in-out;
 	transform: scaleY(0);
+
+	background: $gray10;
+}
+.ptr-bo-app-select-list.open {
+	transform: none;
 }
 .ptr-bo-app-select-list > .ptr-bo-app-select-item {
 	margin-bottom: m(1/3);
