--- a/src/apps/backOffice/styles/index.scss
+++ b/src/apps/backOffice/styles/index.scss
@@ -30,24 +30,41 @@
 	width: 40rem;
 }
 
+/* Inputs */
 .ptr-input-wrapper .ptr-input-text{
-	background-color: $gray1;
+	background-color: $gray1; // todo
 	border-radius: .25rem;
-	border: 1px solid $gray4;
+	border: 1px solid $gray4; // todo
+	position: relative;
 }
+
+.ptr-input-wrapper .ptr-input-text.focus {
+	// todo
+}
+
+.ptr-input-wrapper .ptr-input-text.focus::after {
+	content: ' ';
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+	border-radius: .2rem;
+	box-shadow: 0 0 2px 2px var(--accent6);
+	pointer-events: none;
+}
+
 .ptr-input-wrapper .ptr-input-text,
 .ptr-input-wrapper .ptr-input-text input{
 	border-radius: .25rem;
 }
+
 .ptr-input-wrapper .ptr-input-text input{
 	border: 0;
 }
 
 .ptr-input-wrapper textarea{
-	margin-top: 10px;
+	margin: .25rem 0;
     width: 100%;
-    height: 100px;
-	background-color: $gray1;
-	border: 1px solid $gray4;
+    height: 6rem;
+	background-color: $gray1; // todo
+	border: 1px solid $gray4; // todo
 	border-radius: .25rem
 }
