--- a/src/components/common/atoms/InputWrapper/style.scss
+++ b/src/components/common/atoms/InputWrapper/style.scss
@@ -1,28 +1,31 @@
+@import '../../../../styles/variables';
+
 .ptr-input-wrapper {
 	position: relative;
-	border: 1px solid #aaa;
+	border: 1px solid var(--base3);
 	border-radius: .2rem;
-	margin-bottom: 1.5rem;
+	margin-bottom: m(1);
 	box-shadow: 0.05rem 0.05rem 0.2rem 0 rgba(0, 0, 0, .07);
 }
 .ptr-input-wrapper > label,
 .ptr-input-wrapper > div:first-child {
 	display: block;
-	padding: 1rem;
+	padding: m(2/3);
 }
 .ptr-input-wrapper label span,
 .ptr-input-wrapper div span {
-	font-size: .875rem;
+	font-size: $a1;
+	color: var(--base10);
 }
 .ptr-input-wrapper-required {
 	position: absolute;
 	top: 0;
 	right: 1rem;
 	display: block;
-	/*content: "Required";*/
-	border: 1px solid #ccc;
+	border: 1px solid var(--base3);
 	border-top: 0;
-	font-size: .875rem;
+	color: var(--base6);
+	font-size: $b1;
 	line-height: 1.5rem;
 	padding: 0 .5rem;
 	border-radius: 0 0 .2rem .2rem;
@@ -30,7 +33,7 @@
 }
 .ptr-input-wrapper-info {
 	border-top: 1px solid rgba(0, 0, 0, .1);
-	font-size: .8125rem;
+	font-size: $b1;
 	padding: .5rem 1rem;
 	line-height: 1.5;
 }
@@ -38,5 +41,5 @@
 	display: block;
 }
 .ptr-input-wrapper > div > label:not(:first-of-type){
-	margin-top: 1rem;
+	margin-top: m(2/3);
 }
