Scope metadata - multiline input

--- a/src/apps/backOffice/styles/index.scss
+++ b/src/apps/backOffice/styles/index.scss
@@ -38,6 +38,10 @@
 	position: relative;
 }
 
+.ptr-input-wrapper textarea{
+	outline: none;
+}
+
 .ptr-input-wrapper .ptr-input-text.focus {
 	// todo
 }
