--- a/src/apps/backOffice/components/Test/style.scss
+++ b/src/apps/backOffice/components/Test/style.scss
@@ -14,17 +14,18 @@
 	top: 0;
 }
 .testy {
-	height: 12vw;
-	display: flex;
-	justify-content: space-evenly;
 	background-color: var(--base0);
+	padding: 4vw 0;
 }
 .testy > div {
-	margin: 3vw 0;
-	width: 6vw;
-	height: 6vw;
 	z-index: 1;
 	position: relative;
+	display: flex;
+	justify-content: space-evenly;
+}
+.testy > div > div {
+	height: 6vw;
+	flex: 1;
 }
 .testy > div:nth-child(1) {
 	background-color: var(--base0);
