--- a/src/components/common/atoms/Select/Item.scss
+++ b/src/components/common/atoms/Select/Item.scss
@@ -1,5 +1,5 @@
 @import '../../../../styles/variables';
-@import '../../styles/variables';
+@import '../../../../apps/backOffice/styles/variables';
 
 .ptr-item,
 a.ptr-item {
