--- a/src/components/common/atoms/Select/select.scss
+++ b/src/components/common/atoms/Select/select.scss
@@ -1,5 +1,5 @@
 @import '../../../../styles/variables';
-@import '../../styles/variables';
+@import '../../../../apps/backOffice/styles/variables';
 
 .ptr-select-container .ptr-select__control {
     display: flex;
