--- a/src/apps/backOffice/components/AppSelect/style.scss
+++ b/src/apps/backOffice/components/AppSelect/style.scss
@@ -57,13 +57,16 @@
 }
 
 .ptr-bo-app-select-list > div > div {
-	padding: m(1/3) m(1/3) 0;
+
+	//height: 100%;
+	//padding: m(2/3) m(2/3) 0;
+	padding: m(2/3);
 
 
 	transform: translateY(-100%);
 	transition: transform .3s ease-in-out;
 
-	background: $gray9;
+	background: rgba(var(--base12rgb), .8);
 
 	pointer-events: all;
 }
@@ -71,7 +74,7 @@
 	transform: none;
 }
 .ptr-bo-app-select-list .ptr-bo-app-select-item {
-	margin-bottom: m(1/3);
+	margin-bottom: m(2/3);
 }
 .ptr-bo-app-select-list .ptr-bo-app-select-item:hover {
 	background: #ff0;
