--- a/src/components/common/atoms/Select/select.scss
+++ b/src/components/common/atoms/Select/select.scss
@@ -1,141 +1,275 @@
 @import '../../../../styles/variables';
 @import '../../../../apps/backOffice/styles/variables';
 
+/*
+	BASIC
+		Options
+		Key prefix
+
+	VALUE IS TITLE
+*/
+
+/* === BASIC ======================================== */
 .ptr-select-container .ptr-select__control {
-    display: flex;
+	background: var(--base1); // todo
 	border-radius: .25rem;
-	border: 2px dashed $bo-accent3;
-	box-shadow: none;
-    background: none;
-    margin-bottom: m(1/3);
-	padding: 0 .375rem;
-    color: var(--base6);
-    position: relative;
-	height: 2rem;
-    min-height: initial;
-}
-
-.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-focused,
-.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-open {
-	box-shadow: none;
-	border-color: $accent5;
-	border-style: solid;
-	margin-bottom: 0px;
-}
-
-.ptr-select-container .ptr-select__value-container {
-	padding: 0px;
-}
-.ptr-select-container .ptr-select__value-container > div {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	margin-top: 0px;
-	margin-bottom: 0px;
+	height: m(4/3);
+	min-height: initial;
+	min-width: 10rem;
+	border-color: var(--base5); // todo
 }
 
 .ptr-select-container .ptr-select__control:hover {
-	border-color: $accent5;
+	border-color: var(--base7); // todo
 }
 
-.ptr-select-container .ptr-select__indicator-separator {
-	background-color: var(--base6);
-	margin-bottom: m(1/4);
-    margin-top: m(1/4);
+.ptr-select-container .ptr-select__control--is-focused {
+	box-shadow: 0 0 2px 2px var(--accent6); // todo
+}
+
+.ptr-select-container .ptr-select__value-container {
+	padding: 0 .5rem;
+	position: initial;
+}
+
+.ptr-select-container .ptr-select__single-value {
+	color: var(--base10); // todo
+}
+
+.ptr-select-container .ptr-select__placeholder {
+	color: var(--base7); // todo
+}
+
+.ptr-select-container .ptr-select__value-container > div {
+	padding-top: 0;
+	padding-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.ptr-select-container .ptr-select__indicators {
+	padding: 0;
+	height: 2rem;
 }
 
 .ptr-select-container .ptr-select__dropdown-indicator {
-	color: var(--base6);
-	padding: 0px;
+	color: var(--base5); // todo
 	cursor: pointer;
 }
 
-.ptr-select-container .ptr-select__dropdown-indicator svg{
-	width: $a1;
-	height: $a1;
+.ptr-select-container .ptr-select__indicator-separator {
+	background: var(--base5); // todo
 }
 
-.ptr-select-container .ptr-select__value-container .ptr-select__placeholder {
-	color: var(--base6);
-	padding: m(1/12) .375rem 0;
-	line-height: calc(#{m(1 + 1/3)} - 4px);	
+.ptr-select-container .ptr-select__control:hover .ptr-select__dropdown-indicator,
+.ptr-select-container .ptr-select__control--is-focused .ptr-select__dropdown-indicator,
+.ptr-select-container .ptr-select__dropdown-indicator:hover {
+	color: var(--base7); // todo
 }
 
+.ptr-select-container .ptr-select__control:hover .ptr-select__indicator-separator,
+.ptr-select-container .ptr-select__control--is-focused .ptr-select__indicator-separator {
+	background: var(--base7); // todo
+}
+
+/* Options */
 .ptr-select-container .ptr-select__menu {
-	margin-top: 0px;
-	border-top-left-radius: 0px;
-	border-top-right-radius: 0px;
+
 }
 
 .ptr-select-container .ptr-select__menu .ptr-select__menu-list {
-	color: var(--base6);
-}
-.ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option {
-	cursor: pointer;
-	padding: 0px m(2/4);
-}
-.ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option--is-focused {
-	background-color: $accent2;
+	background-color: var(--base2); // todo
+	color: var(--base10); // todo
+	padding: 0;
 }
 
-.ptr-select-container .ptr-select__menu .ptr-select__option .label{
-	display: flex;
-    margin-left: 0.5rem;
-    line-height: $a2;
+.ptr-select-container .ptr-select__menu .ptr-select__option {
+	padding: .25rem .75rem;
 }
 
-.ptr-select-container .ptr-select__menu .ptr-select__option .option-id{
-	line-height: $a2;
-	color: var(--base4);
+.ptr-select-container .ptr-select__menu .ptr-select__option--is-focused {
+	background-color: var(--accent3);
+}
+
+.ptr-select-container .ptr-select__menu .ptr-select__option--is-selected {
+	background-color: var(--accent6);
+}
+
+/* Key prefix */
+.ptr-select-container .option-id{
 	display: inline-block;
-	font-size: .75rem;
-	text-align: center;
-	margin-right: 1ch;
-	text-overflow: ellipsis;
-    max-width: 8ch;
-    white-space: nowrap;
-    overflow: hidden;
+	color: var(--base5);
+	font-size: $b1;
+	width: 2.3rem;
 }
 
-.ptr-select__single-value .label{
-	display: flex;
-	margin-left: m(.25);
+.ptr-select-container .ptr-select__menu .ptr-select__option--is-selected .option-id{
+	color: var(--accent2);
 }
 
-.ptr-select__single-value .option-id{
-	color: var(--base4);
-	display: inline-block;
-	font-size: m(.5);
-	text-align: center;
-	margin-right: $a1;
-    white-space: nowrap;
-    overflow: hidden;
+/* === VALUE IS TITLE =================================================== */
+.ptr-select-container.value-is-title .ptr-select__control {
+	background: none;
+	border: 0;
+	border-bottom: 1px dashed var(--base3); // todo
+	font-size: $a2;
+	font-weight: 400;
+	height: m(5/3);
 }
 
-.ptr-select-heading{
-	flex-grow: 2;
-
-	.ptr-select__control{
-		border-width: 0px;
-		border-bottom: 1px solid var(--base9);
-		border-radius: 0px;
-	}
-
-	&.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-focused,
-	&.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-open {
-		box-shadow: none;
-		border-color: var(--base9);
-		border-bottom-width: 2px;
-	}
-
-	.ptr-select__indicator{
-		margin: 0px m(.5);
-	}
-
-	.ptr-select__indicator_add{
-		font-size: 0.75rem;
-		line-height: 1rem;
-		align-items: center;
-		display: flex;
-	}
-
+.ptr-select-container.value-is-title .ptr-select__value-container > div {
+	margin-top: .3rem;
 }
+
+.ptr-select-container.value-is-title .ptr-select__indicator-separator {
+	display: none;
+}
+
+.ptr-select-container.value-is-title .ptr-select__indicators {
+	margin-top: .3rem;
+	height: 2.5rem;
+}
+
+.ptr-select-container.value-is-title .ptr-select__control--is-focused {
+	box-shadow: none; // todo
+}
+
+
+//.ptr-select-container .ptr-select__control {
+//    display: flex;
+//	border-radius: .25rem;
+//	border: 2px dashed $bo-accent3;
+//	box-shadow: none;
+//    background: none;
+//    margin-bottom: m(1/3);
+//	padding: 0 .375rem;
+//    color: var(--base6);
+//    position: relative;
+//	height: 2rem;
+//    min-height: initial;
+//}
+//
+//.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-focused,
+//.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-open {
+//	box-shadow: none;
+//	border-color: $accent5;
+//	border-style: solid;
+//	margin-bottom: 0px;
+//}
+//
+//.ptr-select-container .ptr-select__value-container {
+//	padding: 0px;
+//}
+//.ptr-select-container .ptr-select__value-container > div {
+//	padding-top: 0px;
+//	padding-bottom: 0px;
+//	margin-top: 0px;
+//	margin-bottom: 0px;
+//}
+//
+//.ptr-select-container .ptr-select__control:hover {
+//	border-color: $accent5;
+//}
+//
+//.ptr-select-container .ptr-select__indicator-separator {
+//	background-color: var(--base6);
+//	margin-bottom: m(1/4);
+//    margin-top: m(1/4);
+//}
+//
+//.ptr-select-container .ptr-select__dropdown-indicator {
+//	color: var(--base6);
+//	padding: 0px;
+//	cursor: pointer;
+//}
+//
+//.ptr-select-container .ptr-select__dropdown-indicator svg{
+//	width: $a1;
+//	height: $a1;
+//}
+//
+//.ptr-select-container .ptr-select__value-container .ptr-select__placeholder {
+//	color: var(--base6);
+//	padding: m(1/12) .375rem 0;
+//	line-height: calc(#{m(1 + 1/3)} - 4px);
+//}
+//
+//.ptr-select-container .ptr-select__menu {
+//	margin-top: 0px;
+//	border-top-left-radius: 0px;
+//	border-top-right-radius: 0px;
+//}
+//
+//.ptr-select-container .ptr-select__menu .ptr-select__menu-list {
+//	color: var(--base6);
+//}
+//.ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option {
+//	cursor: pointer;
+//	padding: 0px m(2/4);
+//}
+//.ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option--is-focused {
+//	background-color: $accent2;
+//}
+//
+//.ptr-select-container .ptr-select__menu .ptr-select__option .label{
+//	display: flex;
+//    margin-left: 0.5rem;
+//    line-height: $a2;
+//}
+//
+//.ptr-select-container .ptr-select__menu .ptr-select__option .option-id{
+//	line-height: $a2;
+//	color: var(--base4);
+//	display: inline-block;
+//	font-size: .75rem;
+//	text-align: center;
+//	margin-right: 1ch;
+//	text-overflow: ellipsis;
+//    max-width: 8ch;
+//    white-space: nowrap;
+//    overflow: hidden;
+//}
+//
+//.ptr-select__single-value .label{
+//	display: flex;
+//	margin-left: m(.25);
+//}
+//
+//.ptr-select__single-value .option-id{
+//	color: var(--base4);
+//	display: inline-block;
+//	font-size: m(.5);
+//	text-align: center;
+//	margin-right: $a1;
+//    white-space: nowrap;
+//    overflow: hidden;
+//}
+//
+//.ptr-select-heading{
+//	flex-grow: 2;
+//
+//	.ptr-select__control{
+//		border-width: 0px;
+//		border-bottom: 1px solid var(--base9);
+//		border-radius: 0px;
+//	}
+//
+//	&.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-focused,
+//	&.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-open {
+//		box-shadow: none;
+//		border-color: var(--base9);
+//		border-bottom-width: 2px;
+//	}
+//
+//	.ptr-select__indicator{
+//		margin: 0px m(.5);
+//	}
+//
+//	.ptr-select__indicator_add{
+//		font-size: 0.75rem;
+//		line-height: 1rem;
+//		align-items: center;
+//		display: flex;
+//	}
+//
+//}
