--- a/src/apps/docs/components/DocsPage/style.scss
+++ b/src/apps/docs/components/DocsPage/style.scss
@@ -22,19 +22,24 @@
 }
 
 .ptr-docs-panel h1 {
-  color: var(--base8);
+  color: var(--base9);
   font-size: $a3;
   margin-bottom: m(1/3);
 }
 
 .ptr-docs-panel h2 {
-  color: var(--base8);
+  color: var(--base9);
   font-size: $a2;
   margin-bottom: m(1/3);
 }
 
 .ptr-docs-panel-section {
   margin-bottom: m(1);
+}
+
+.ptr-docs-panel-section p {
+  color: var(--base9);
+  margin-bottom: m(1/3);
 }
 
 .ptr-docs-panel-section .ptr-button {
