--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -94,6 +94,106 @@ $darkmode-accent10: #1a2f2c;
 $darkmode-accent11: #141f1d;
 $darkmode-accent12: #040300;
 
+$lightBase0: hsl(40,100%,99.41%);
+$lightBase0rgb: 255, 254, 252;
+$lightBase05:  hsl(40,17.6%,96.75%);
+$lightBase10: hsl(39.99,10.45%,94.64%);
+$lightBase15: hsl(39.99,7.06%,92.26%);
+$lightBase20: hsl(39.98,4.83%,89.07%);
+$lightBase25: hsl(39.98,3.32%,84.83%);
+$lightBase30: hsl(39.96,2.32%,79.55%);
+$lightBase35: hsl(39.95,1.64%,73.34%);
+$lightBase40: hsl(39.92,1.19%,66.49%);
+$lightBase45: hsl(39.89,0.88%,59.33%);
+$lightBase50: hsl(39.84,0.67%,52.26%);
+$lightBase50rgb: 134, 134, 132;
+$lightBase55: hsl(39.77,0.61%,45.57%);
+$lightBase60: hsl(39.68,0.62%,39.58%);
+$lightBase65: hsl(39.56,0.64%,34.38%);
+$lightBase70: hsl(39.42,0.65%,30.07%);
+$lightBase75: hsl(39.26,0.67%,26.48%);
+$lightBase80: hsl(39.07,0.7%,23.37%);
+$lightBase85: hsl(38.81,0.73%,20.25%);
+$lightBase90: hsl(38.36,0.81%,16.5%);
+$lightBase95: hsl(37.31,1.06%,11.31%);
+$lightBase100: hsl(45,100%,1%);
+$lightBase100rgb: 4, 3, 0;
+
+$darkBase0: hsl(45,100%,1%);
+$darkBase0rgb: 4, 3, 0;
+$darkBase05:  hsl(36.11,1.69%,7.43%);
+$darkBase10: hsl(37.31,1.06%,11.31%);
+$darkBase15: hsl(38.14,0.85%,15.16%);
+$darkBase20: hsl(38.73,0.75%,19.42%);
+$darkBase25: hsl(39.12,0.69%,24.1%);
+$darkBase30: hsl(39.39,0.66%,29.18%);
+$darkBase35: hsl(39.57,0.64%,34.59%);
+$darkBase40: hsl(39.69,0.62%,40.23%);
+$darkBase45: hsl(39.77,0.61%,45.94%);
+$darkBase50: hsl(39.83,0.65%,51.62%);
+$darkBase50rgb: 132, 132, 131;
+$darkBase55: hsl(39.87,0.81%,57.18%);
+$darkBase60: hsl(39.9,1%,62.55%);
+$darkBase65: hsl(39.93,1.26%,67.73%);
+$darkBase70: hsl(39.94,1.59%,72.74%);
+$darkBase75: hsl(39.96,2.06%,77.6%);
+$darkBase80: hsl(39.97,2.78%,82.36%);
+$darkBase85: hsl(39.98,4%,87.06%);
+$darkBase90: hsl(39.99,6.49%,91.63%);
+$darkBase95: hsl(40,13.73%,95.87%);
+$darkBase100: hsl(40,100%,99.41%);
+$darkBase100rgb: 255, 254, 252;
+
+$lightAccent0: hsl(40,100%,99.41%);
+$lightAccent0rgb: 255, 254, 252;
+$lightAccent05:  hsl(156.45,33.56%,96.31%);
+$lightAccent10: hsl(166.02,36.8%,93.53%);
+$lightAccent15: hsl(169.78,38.24%,90.37%);
+$lightAccent20: hsl(172.12,39.2%,86.1%);
+$lightAccent25: hsl(173.77,39.96%,80.31%);
+$lightAccent30: hsl(175.04,40.71%,72.85%);
+$lightAccent35: hsl(176.12,41.77%,63.58%);
+$lightAccent40: hsl(177.17,43.99%,51.82%);
+$lightAccent45: hsl(177.69,59.73%,41.29%);
+$lightAccent50: hsl(177.45,55.5%,37.31%);
+$lightAccent50rgb: 42, 148, 143;
+$lightAccent55: hsl(177.15,51.51%,33.37%);
+$lightAccent60: hsl(176.8,47.79%,29.66%);
+$lightAccent65: hsl(176.39,44.39%,26.34%);
+$lightAccent70: hsl(175.94,41.34%,23.48%);
+$lightAccent75: hsl(175.44,38.61%,21.05%);
+$lightAccent80: hsl(174.86,36.01%,18.89%);
+$lightAccent85: hsl(174.08,33.12%,16.68%);
+$lightAccent90: hsl(172.64,29.1%,13.94%);
+$lightAccent95: hsl(168.3,21.77%,10.02%);
+$lightAccent100: hsl(45, 100%, 1%);
+$lightAccent100rgb: 4, 3, 0;
+
+$darkAccent0: hsl(45,100%,1%);
+$darkAccent0rgb: 4, 3, 0;
+$darkAccent05:  hsl(158.35,18.54%,6.8%);
+$darkAccent10: hsl(168.3,21.77%,10.02%);
+$darkAccent15: hsl(171.91,27.48%,12.96%);
+$darkAccent20: hsl(173.82,32.28%,16.07%);
+$darkAccent25: hsl(175.01,36.63%,19.4%);
+$darkAccent30: hsl(175.83,40.68%,22.89%);
+$darkAccent35: hsl(176.41,44.53%,26.47%);
+$darkAccent40: hsl(176.84,48.2%,30.07%);
+$darkAccent45: hsl(177.17,51.73%,33.59%);
+$darkAccent50: hsl(177.42,55.12%,36.94%);
+$darkAccent50rgb: 42, 146, 142;
+$darkAccent55: hsl(177.62,58.43%,40.1%);
+$darkAccent60: hsl(177.79,61.69%,43.02%);
+$darkAccent65: hsl(176.98,43.42%,54.17%);
+$darkAccent70: hsl(176.21,41.9%,62.63%);
+$darkAccent75: hsl(175.4,41%,70.02%);
+$darkAccent80: hsl(174.42,40.31%,76.88%);
+$darkAccent85: hsl(173.02,39.6%,83.37%);
+$darkAccent90: hsl(170.38,38.48%,89.54%);
+$darkAccent95: hsl(161.96,35.36%,95.16%);
+$darkAccent100: hsl(40,100%,99.41%);
+$darkAccent100rgb: 255, 254, 252;
+
 
 $bo0: #c7c5c2;
 $bo0rgb: 199, 197, 194;
