--- a/src/components/common/atoms/Select/select.scss
+++ b/src/components/common/atoms/Select/select.scss
@@ -11,20 +11,20 @@
 
 /* === BASIC ======================================== */
 .ptr-select-container .ptr-select__control {
-	background: var(--base1); // todo
+	background: var(--base0); // todo
 	border-radius: .25rem;
 	height: m(4/3);
 	min-height: initial;
 	min-width: 10rem;
-	border-color: var(--base5); // todo
+	border-color: var(--base50); // todo
 }
 
 .ptr-select-container .ptr-select__control:hover {
-	border-color: var(--base7); // todo
+	border-color: var(--base70); // todo
 }
 
 .ptr-select-container .ptr-select__control--is-focused {
-	box-shadow: 0 0 2px 2px var(--accent6); // todo
+	box-shadow: 0 0 2px 2px var(--accent60); // todo
 }
 
 .ptr-select-container .ptr-select__value-container {
@@ -33,11 +33,11 @@
 }
 
 .ptr-select-container .ptr-select__single-value {
-	color: var(--base10); // todo
+	color: var(--base100); // todo
 }
 
 .ptr-select-container .ptr-select__placeholder {
-	color: var(--base7); // todo
+	color: var(--base70); // todo
 }
 
 .ptr-select-container .ptr-select__value-container > div {
@@ -53,33 +53,33 @@
 }
 
 .ptr-select-container .ptr-select__dropdown-indicator {
-	color: var(--base5); // todo
+	color: var(--base50); // todo
 	cursor: pointer;
 }
 
 .ptr-select-container .ptr-select__indicator-separator {
-	background: var(--base5); // todo
+	background: var(--base50); // todo
 }
 
 .ptr-select-container .ptr-select__control:hover .ptr-select__dropdown-indicator,
 .ptr-select-container .ptr-select__control--is-focused .ptr-select__dropdown-indicator,
 .ptr-select-container .ptr-select__dropdown-indicator:hover {
-	color: var(--base7); // todo
+	color: var(--base70); // todo
 }
 
 .ptr-select-container .ptr-select__control:hover .ptr-select__indicator-separator,
 .ptr-select-container .ptr-select__control--is-focused .ptr-select__indicator-separator {
-	background: var(--base7); // todo
+	background: var(--base70); // todo
 }
 
 /* Options */
 .ptr-select-container .ptr-select__menu {
-
+	margin-top: 0;
 }
 
 .ptr-select-container .ptr-select__menu .ptr-select__menu-list {
-	background-color: var(--base2); // todo
-	color: var(--base10); // todo
+	background-color: var(--base20); // todo
+	color: var(--base100); // todo
 	padding: 0;
 }
 
@@ -88,30 +88,30 @@
 }
 
 .ptr-select-container .ptr-select__menu .ptr-select__option--is-focused {
-	background-color: var(--accent3);
+	background-color: var(--accent30);
 }
 
 .ptr-select-container .ptr-select__menu .ptr-select__option--is-selected {
-	background-color: var(--accent6);
+	background-color: var(--accent50);
 }
 
 /* Key prefix */
 .ptr-select-container .option-id{
 	display: inline-block;
-	color: var(--base5);
+	color: var(--base50);
 	font-size: $b1;
 	width: 2.3rem;
 }
 
 .ptr-select-container .ptr-select__menu .ptr-select__option--is-selected .option-id{
-	color: var(--accent2);
+	color: var(--accent20);
 }
 
 /* === VALUE IS TITLE =================================================== */
 .ptr-select-container.value-is-title .ptr-select__control {
 	background: none;
 	border: 0;
-	border-bottom: 1px dashed var(--base3); // todo
+	border-bottom: 1px dashed var(--base30); // todo
 	font-size: $a2;
 	font-weight: 400;
 	height: m(5/3);
@@ -133,143 +133,3 @@
 .ptr-select-container.value-is-title .ptr-select__control--is-focused {
 	box-shadow: none; // todo
 }
-
-
-//.ptr-select-container .ptr-select__control {
-//    display: flex;
-//	border-radius: .25rem;
-//	border: 2px dashed $bo-accent3;
-//	box-shadow: none;
-//    background: none;
-//    margin-bottom: m(1/3);
-//	padding: 0 .375rem;
-//    color: var(--base6);
-//    position: relative;
-//	height: 2rem;
-//    min-height: initial;
-//}
-//
-//.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-focused,
-//.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-open {
-//	box-shadow: none;
-//	border-color: $accent5;
-//	border-style: solid;
-//	margin-bottom: 0px;
-//}
-//
-//.ptr-select-container .ptr-select__value-container {
-//	padding: 0px;
-//}
-//.ptr-select-container .ptr-select__value-container > div {
-//	padding-top: 0px;
-//	padding-bottom: 0px;
-//	margin-top: 0px;
-//	margin-bottom: 0px;
-//}
-//
-//.ptr-select-container .ptr-select__control:hover {
-//	border-color: $accent5;
-//}
-//
-//.ptr-select-container .ptr-select__indicator-separator {
-//	background-color: var(--base6);
-//	margin-bottom: m(1/4);
-//    margin-top: m(1/4);
-//}
-//
-//.ptr-select-container .ptr-select__dropdown-indicator {
-//	color: var(--base6);
-//	padding: 0px;
-//	cursor: pointer;
-//}
-//
-//.ptr-select-container .ptr-select__dropdown-indicator svg{
-//	width: $a1;
-//	height: $a1;
-//}
-//
-//.ptr-select-container .ptr-select__value-container .ptr-select__placeholder {
-//	color: var(--base6);
-//	padding: m(1/12) .375rem 0;
-//	line-height: calc(#{m(1 + 1/3)} - 4px);
-//}
-//
-//.ptr-select-container .ptr-select__menu {
-//	margin-top: 0px;
-//	border-top-left-radius: 0px;
-//	border-top-right-radius: 0px;
-//}
-//
-//.ptr-select-container .ptr-select__menu .ptr-select__menu-list {
-//	color: var(--base6);
-//}
-//.ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option {
-//	cursor: pointer;
-//	padding: 0px m(2/4);
-//}
-//.ptr-select-container .ptr-select__menu .ptr-select__option.ptr-select__option--is-focused {
-//	background-color: $accent2;
-//}
-//
-//.ptr-select-container .ptr-select__menu .ptr-select__option .label{
-//	display: flex;
-//    margin-left: 0.5rem;
-//    line-height: $a2;
-//}
-//
-//.ptr-select-container .ptr-select__menu .ptr-select__option .option-id{
-//	line-height: $a2;
-//	color: var(--base4);
-//	display: inline-block;
-//	font-size: .75rem;
-//	text-align: center;
-//	margin-right: 1ch;
-//	text-overflow: ellipsis;
-//    max-width: 8ch;
-//    white-space: nowrap;
-//    overflow: hidden;
-//}
-//
-//.ptr-select__single-value .label{
-//	display: flex;
-//	margin-left: m(.25);
-//}
-//
-//.ptr-select__single-value .option-id{
-//	color: var(--base4);
-//	display: inline-block;
-//	font-size: m(.5);
-//	text-align: center;
-//	margin-right: $a1;
-//    white-space: nowrap;
-//    overflow: hidden;
-//}
-//
-//.ptr-select-heading{
-//	flex-grow: 2;
-//
-//	.ptr-select__control{
-//		border-width: 0px;
-//		border-bottom: 1px solid var(--base9);
-//		border-radius: 0px;
-//	}
-//
-//	&.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-focused,
-//	&.ptr-select-container .ptr-select__control.ptr-select__control--menu-is-open {
-//		box-shadow: none;
-//		border-color: var(--base9);
-//		border-bottom-width: 2px;
-//	}
-//
-//	.ptr-select__indicator{
-//		margin: 0px m(.5);
-//	}
-//
-//	.ptr-select__indicator_add{
-//		font-size: 0.75rem;
-//		line-height: 1rem;
-//		align-items: center;
-//		display: flex;
-//	}
-//
-//}
