--- a/src/apps/backOffice/components/TopBar/style.scss
+++ b/src/apps/backOffice/components/TopBar/style.scss
@@ -4,6 +4,10 @@
 	display: flex;
 }
 
+.ptr-bo-top-bar-app-select {
+	margin-right: 1rem;
+}
+
 .ptr-bo-top-bar-quick-access {
 	height: 100%;
 	flex: 1;
