--- a/src/apps/esponFuore/styles/index.scss
+++ b/src/apps/esponFuore/styles/index.scss
@@ -1,2 +1,15 @@
 @import '../../../styles/variables';
 
+.esponFuore-app {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.esponFuore-header {
+	flex: 0;
+}
+
+.esponFuore-content {
+	flex: 1;
+}
