--- a/src/apps/esponFuore/components/ScopesList/style.scss
+++ b/src/apps/esponFuore/components/ScopesList/style.scss
@@ -9,44 +9,59 @@
 .ptr-fuore-scope-card {
 	cursor: pointer;
 	height: m(10);
+	position: relative;
 	flex-basis: 25%;
 	max-width: 35rem;
+	border-bottom: 1px solid #999;
+}
+
+.ptr-fuore-scope-card:before {
+	content: " ";
+	background: linear-gradient(135deg, rgb(0,0,0), rgb(0,0,0) 60%, transparent);
+	opacity: .7;
+	transition: opacity .3s ease-in-out;
+	z-index: 0;
+	@include positionFill;
 }
 
 .ptr-fuore-scope-card-name {
+	position: relative;
 	display: inline-block;
 	margin: m(1) 0 m(2/3);
 	padding: .5rem 1.5rem;
 	background: var(--accent50);
 	color: var(--base05);
 	font-size: $b2;
-	transition: background-color .3s ease-in-out;
-}
-
-.ptr-fuore-scope-card:hover .ptr-fuore-scope-card-name,
-.ptr-fuore-scope-card:focus .ptr-fuore-scope-card-name {
-	background: var(--accent40);
+	transition: background-color .3s ease-in-out, color .3s ease-in-out;
+	z-index: 1;
 }
 
 .ptr-fuore-scope-card-description {
-	margin: 0 2.5rem 0 1.5rem;
+	position: relative;
+	margin: 0 3.5rem 0 1.5rem;
 	color: var(--base25);
 	font-size: $b1;
 	line-height: 1.3;
 	max-width: 20rem;
+	transition: color .3s ease-in-out;
+	z-index: 1;
 }
 
-.ptr-fuore-scope-card:nth-of-type(1) {
-	background: red;
+.ptr-fuore-scope-card:hover:before,
+.ptr-fuore-scope-card:focus:before {
+	background: linear-gradient(135deg, rgb(0,0,0), rgb(0,0,0) 60%, transparent);
+	opacity: .60;
 }
-.ptr-fuore-scope-card:nth-of-type(2) {
-	background: blue;
+
+.ptr-fuore-scope-card:hover .ptr-fuore-scope-card-name,
+.ptr-fuore-scope-card:focus .ptr-fuore-scope-card-name {
+	background: var(--accent45);
+	color: var(--base0);
 }
-.ptr-fuore-scope-card:nth-of-type(3) {
-	background: green;
-}
-.ptr-fuore-scope-card:nth-of-type(4) {
-	background: orange;
+
+.ptr-fuore-scope-card:hover .ptr-fuore-scope-card-description,
+.ptr-fuore-scope-card:focus .ptr-fuore-scope-card-description {
+	color: var(--base15);
 }
 
 @media screen and (max-width: 105rem)  {
