--- a/src/apps/esponFuore/components/LandingPage/style.scss
+++ b/src/apps/esponFuore/components/LandingPage/style.scss
@@ -31,8 +31,14 @@
 	padding: m(1) m(1) m(1) m(2);
 }
 
+.ptr-fuore-landing-page-links {
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .ptr-fuore-landing-page-text .bottom-link {
-	margin-right: 2rem;
+	margin: 0 2rem m(1/3) 0;
+	min-width: 10rem;
 }
 
 .ptr-fuore-landing-page-footer {
@@ -65,6 +71,9 @@
 	}
 	.ptr-fuore-landing-page-logo {
 		padding: m(1/3) m(1);
+	}
+	.ptr-fuore-landing-page-links {
+		flex-direction: column;
 	}
 	.ptr-fuore-landing-page-footer {
 		flex-direction: column;
