--- a/src/apps/esponFuore/components/ScopesList/style.scss
+++ b/src/apps/esponFuore/components/ScopesList/style.scss
@@ -12,12 +12,11 @@
 	position: relative;
 	flex-basis: 25%;
 	max-width: 35rem;
-	border-bottom: 1px solid #999;
 }
 
 .ptr-fuore-scope-card:before {
-	content: " ";
-	background: linear-gradient(135deg, rgb(0,0,0), rgb(0,0,0) 60%, transparent);
+	content: "";
+	background: linear-gradient(155deg, rgb(0,0,0), rgb(0,0,0) 50%, transparent);
 	opacity: .7;
 	transition: opacity .3s ease-in-out;
 	z-index: 0;
@@ -39,7 +38,7 @@
 .ptr-fuore-scope-card-description {
 	position: relative;
 	margin: 0 3.5rem 0 1.5rem;
-	color: var(--base25);
+	color: var(--base10);
 	font-size: $b1;
 	line-height: 1.3;
 	max-width: 20rem;
@@ -49,7 +48,7 @@
 
 .ptr-fuore-scope-card:hover:before,
 .ptr-fuore-scope-card:focus:before {
-	background: linear-gradient(135deg, rgb(0,0,0), rgb(0,0,0) 60%, transparent);
+	background: linear-gradient(155deg, rgb(0,0,0), rgb(0,0,0) 55%, transparent);
 	opacity: .60;
 }
 
@@ -61,12 +60,12 @@
 
 .ptr-fuore-scope-card:hover .ptr-fuore-scope-card-description,
 .ptr-fuore-scope-card:focus .ptr-fuore-scope-card-description {
-	color: var(--base15);
+	color: var(--base0);
 }
 
 @media screen and (max-width: 105rem)  {
 	.ptr-fuore-scope-card {
-		flex-basis: 33.33333333%;
+		flex-basis: calc(100%/3);
 	}
 }
 
