--- a/src/apps/esponFuore/components/LandingPage/style.scss
+++ b/src/apps/esponFuore/components/LandingPage/style.scss
@@ -1,81 +1,81 @@
 @import '../../../../styles/variables';
 
-.ptr-fuore-landing-page {
+.esponFuore-landing-page {
 	background: var(--base0);
 	display: flex;
 	justify-content: center;
 }
 
-.ptr-fuore-landing-page > div {
+.esponFuore-landing-page > div {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	max-width: 120rem;
 }
 
-.ptr-fuore-landing-page-intro {
+.esponFuore-landing-page-intro {
 	display: flex;
 	padding: m(4/3) m(2);
 }
 
-.ptr-fuore-landing-page-logo {
+.esponFuore-landing-page-logo {
 	padding: m(1);
 }
 
-.ptr-fuore-landing-page-logo > img {
+.esponFuore-landing-page-logo > img {
 	min-width: 7rem;
 	width: 7rem;
 }
 
-.ptr-fuore-landing-page-text {
+.esponFuore-landing-page-text {
 	padding: m(1) m(1) m(1) m(2);
 }
 
-.ptr-fuore-landing-page-links {
+.esponFuore-landing-page-links {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.ptr-fuore-landing-page-text .bottom-link {
+.esponFuore-landing-page-text .bottom-link {
 	margin: 0 2rem m(1/3) 0;
 	min-width: 10rem;
 }
 
-.ptr-fuore-landing-page-footer {
+.esponFuore-landing-page-footer {
 	padding: m(2) m(1) m(1);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.ptr-fuore-landing-page-footer > a {
+.esponFuore-landing-page-footer > a {
 	margin: m(1) m(2);
 }
 
-.ptr-fuore-landing-page-footer > a img {
+.esponFuore-landing-page-footer > a img {
 	width: 7rem;
 }
 
 @media screen and (max-width: 60rem)  {
-	.ptr-fuore-landing-page-intro {
+	.esponFuore-landing-page-intro {
 		padding: m(1);
 	}
-	.ptr-fuore-landing-page-text {
+	.esponFuore-landing-page-text {
 		padding: m(1);
 	}
 }
 
 @media screen and (max-width: 35rem)  {
-	.ptr-fuore-landing-page-intro {
+	.esponFuore-landing-page-intro {
 		flex-direction: column;
 	}
-	.ptr-fuore-landing-page-logo {
+	.esponFuore-landing-page-logo {
 		padding: m(1/3) m(1);
 	}
-	.ptr-fuore-landing-page-links {
+	.esponFuore-landing-page-links {
 		flex-direction: column;
 	}
-	.ptr-fuore-landing-page-footer {
+	.esponFuore-landing-page-footer {
 		flex-direction: column;
 	}
 }
