--- a/src/components/common/atoms/Select/select.scss
+++ b/src/components/common/atoms/Select/select.scss
@@ -76,6 +76,7 @@
 /* Options */
 .ptr-select-container .ptr-select__menu {
 	margin-top: 0;
+	z-index: 10;
 }
 
 .ptr-select-container .ptr-select__menu .ptr-select__menu-list {
