--- a/src/components/common/atoms/PantherSelect/style.scss
+++ b/src/components/common/atoms/PantherSelect/style.scss
@@ -1,2 +1,46 @@
 @import '../../../../styles/variables';
 
+.ptr-panther-select-current {
+	display: flex;
+}
+.ptr-panther-select-current > div:first-child {
+	flex: 1;
+}
+.ptr-panther-select-current-icon {
+	$width: m(1);
+	flex: 0 0 $width;
+}
+.ptr-panther-select-current-icon > svg {
+	transition: transform .3s ease-in-out;
+}
+.ptr-panther-select.open .ptr-panther-select-current-icon > svg {
+	transform: rotate(180deg);
+}
+
+.ptr-panther-select-list {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	height: 100vh;
+	padding-top: 3rem;
+	pointer-events: none;
+	display: flex;
+	z-index: 10;
+}
+
+.ptr-panther-select-list > div {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.ptr-panther-select-list > div > div {
+	transform: translateY(-100%);
+	transition: transform .3s ease-in-out;
+	pointer-events: none;
+}
+.ptr-panther-select.open .ptr-panther-select-list > div > div {
+	transform: none;
+	pointer-events: all;
+}
