--- a/src/apps/esponFuore/styles/index.scss
+++ b/src/apps/esponFuore/styles/index.scss
@@ -93,3 +93,30 @@
 .esponFuore-header-toolbar-right {
 	flex: 0 0 5rem;
 }
+
+
+
+/* indicator select */
+.esponFuore-indicator-select-current {
+	height: m(3);
+	background-color: var(--accent50);
+}
+
+.esponFuore-indicator-select-list {
+	padding-top: 3rem;
+}
+.esponFuore-indicator-select-list.ptr-panther-select-list > div > div {
+	height: 100%;
+	transition: transform .5s ease-in-out;
+}
+.esponFuore-indicator-select-content {
+	height: 100%;
+	background: linear-gradient(var(--accent50) 55%, var(--accent70) 100%);
+	background-size: auto 200%;
+	background-position: 0 0;
+	transition: background-position .5s ease-in-out;
+}
+.esponFuore-indicator-select.open .esponFuore-indicator-select-content {
+	//background: linear-gradient(var(--accent50) 10%, var(--accent100) 100%);
+	background-position: 0 100%;
+}
