--- a/src/components/common/atoms/Input/Input.scss
+++ b/src/components/common/atoms/Input/Input.scss
@@ -22,7 +22,7 @@
 	padding: 0 .5rem;
 	outline: none;
 }
-.ptr-input-text input:focus {
+.ptr-input-text.focus {
 	box-shadow: 0 0 2px 2px var(--accent60); // todo
 }
 
