esponFuore: indicator select styling

--- a/src/apps/esponFuore/styles/index.scss
+++ b/src/apps/esponFuore/styles/index.scss
@@ -80,6 +80,7 @@
 }
 .esponFuore-header-indicator-select {
 	flex: 0 0 30rem;
+	max-width: 30rem;
 	background-color: var(--accent50);
 }
 .esponFuore-header-toolbar {
