--- a/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
@@ -30,6 +30,39 @@
 	color: #fff;
 }
 
+.esponFuore-indicator-select-current > div {
+	position: relative;
+}
+.esponFuore-indicator-select-current-empty {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-style: italic;
+	color: var(--accent30);
+	letter-spacing: .04rem;
+}
+.esponFuore-indicator-select-current-indicator {
+	font-size: $b2;
+	color: #fff;
+	font-weight: bold;
+	padding: .1rem .5rem 0 1rem;
+	max-height: 2rem;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+.esponFuore-indicator-select-current-category {
+	font-size: $b1;
+	color: #fffc;
+	padding: .6rem .5rem 0 1.05rem;
+}
+.esponFuore-indicator-select-current-category::after {
+	content: '>';
+	opacity: .6;
+	padding-left: .25rem;
+}
+
 
 .esponFuore-indicator-select-categories > a {
 	display: block;
@@ -39,6 +72,7 @@
 	//padding: .53005rem 1.5rem .53005rem .5rem;
 	font-size: $a1;
 	line-height: 1.1;
+	letter-spacing: .02rem;
 	padding: .45rem 1.5rem .45rem .5rem;
 	margin-bottom: .25rem;
 	cursor: pointer;
