Compressed hero image

--- a/src/apps/micrositeDemo/components/Microsite/style.scss
+++ b/src/apps/micrositeDemo/components/Microsite/style.scss
@@ -7,7 +7,7 @@
 	justify-content: center;
 	width: 100%;
 	height: 100vh;
-	background: url('../../assets/img/snezka.png');
+	background: url('../../assets/img/snezka.jpg');
 	background-size: cover;
 }
 .ptr-microsite-hero:after {
