--- a/src/components/common/atoms/Select/Item.scss
+++ b/src/components/common/atoms/Select/Item.scss
@@ -39,6 +39,9 @@ a.ptr-item {
 .ptr-item .label{
 	padding: m(1/12) .375rem 0;
 	line-height: calc(#{m(1 + 1/3)} - 4px);
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .ptr-item .option-id{
