--- a/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
+++ b/src/apps/esponFuore/components/Header/components/IndicatorSelect/style.scss
@@ -107,6 +107,11 @@
 .esponFuore-indicator-select-indicators > div {
 	width: 18rem;
 	height: 12rem;
-	background-color: #ff0;
 	margin: 0 1rem 1rem 0;
+	font-size: 1.309rem;
+	font-weight: bold;
+	line-height: 1.1;
+	padding: .5rem;
+	color: var(--accent80);
+	background-color: rgba(255, 255, 255, .6);
 }
