Fuore - Scopes List - adjusted card name margin

--- a/src/apps/esponFuore/components/ScopesList/style.scss
+++ b/src/apps/esponFuore/components/ScopesList/style.scss
@@ -26,7 +26,7 @@
 .esponFuore-scope-card-name {
 	position: relative;
 	display: inline-block;
-	margin: m(1) 0 m(2/3);
+	margin: m(1) 1rem m(2/3) 0;
 	padding: .5rem 1.5rem;
 	background: var(--accent50);
 	color: var(--base05);
