--- a/src/apps/backOffice/components/pages/MetadataBase/style.scss
+++ b/src/apps/backOffice/components/pages/MetadataBase/style.scss
@@ -1,10 +1,10 @@
 @import '../../../../../styles/variables';
 
-.ptr-bo-metadata-base-menu{
+.ptr-bo-page-base-menu{
     min-width: 200px
 }
 
-.ptr-bo-metadata-base-list{
+.ptr-bo-page-base-list{
     padding: m(1);
     width: 100%;
     height: 100%;
