--- a/src/apps/backOffice/components/screens/style.scss
+++ b/src/apps/backOffice/components/screens/style.scss
@@ -1,32 +1,32 @@
-@import '../../../../../styles/variables';
+@import '../../../../styles/variables';
 
-.ptr-screen-metadata-header {
+.ptr-bo-screen-header {
 	background: $bo-lighter1;
   	border-bottom: 1px solid $bo1;
   	padding-top: m(2/3);
   	padding-bottom: m(2/3);
 }
 
-.ptr-screen-metadata-title {
+.ptr-bo-screen-title {
 	font-size: $b1;
   	color: $bo3;
   	text-transform: uppercase;
 }
 
-.ptr-screen-metadata-switcher {
+.ptr-bo-screen-switcher {
 
 }
 
-.ptr-screen-metadata-content {
+.ptr-bo-screen-content {
 	padding-bottom: m(4/3);
 	padding-top: m(4/3);
 }
 
-.ptr-screen-metadata-buttons {
+.ptr-bo-screen-buttons {
 	display: flex;
 	padding: 0 1px;
 }
 
-.ptr-screen-metadata-buttons-left {
+.ptr-bo-screen-buttons-left {
 	flex: 1;
 }
