--- a/src/apps/esponFuore/components/LandingPage/ScopesList/style.scss
+++ b/src/apps/esponFuore/components/LandingPage/ScopesList/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/variables';
+@import '../../../../../styles/variables';
 
 .esponFuore-scopes-list {
 	background: var(--base25);
