--- a/src/apps/esponFuore/components/LandingPage/style.scss
+++ b/src/apps/esponFuore/components/LandingPage/style.scss
@@ -49,11 +49,11 @@
 }
 
 .esponFuore-landing-page-footer > a {
-	margin: m(1) m(2);
+	margin: m(1) m(3);
 }
 
 .esponFuore-landing-page-footer > a img {
-	width: 7rem;
+	width: 10rem;
 }
 
 @media screen and (max-width: 60rem)  {
@@ -62,6 +62,9 @@
 	}
 	.esponFuore-landing-page-text {
 		padding: m(1);
+	}
+	.esponFuore-landing-page-footer > a {
+		margin: m(1) m(2);
 	}
 }
 
@@ -77,5 +80,8 @@
 	}
 	.esponFuore-landing-page-footer {
 		flex-direction: column;
+	}
+	.esponFuore-landing-page-footer > a {
+		margin: m(1) 0;
 	}
 }
